fix: overflow

--- a/static/css/steps.css
+++ b/static/css/steps.css
@@ -4,6 +4,10 @@
     box-sizing: border-box;
 }
 
+body{
+    overflow-x: none;
+}
+
 .position-image {
     text-align: center;
 }
